# homepage

./: Cargo.toml  Rocket.toml  blog.db
src/: article.rs  main.rs
static/: about.txt
templates/: article.html.tera  article_not_found.html.tera  base.html.tera  freebsd.html.tera  index.html.tera  linux.html.tera  new_article.html.tera  rust.html.tera
